--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,12 +20,15 @@ services:
 
     mysql:
         image: mysql:8.0.26
+        container_name: mysql
         environment:
             MYSQL_ROOT_PASSWORD: root
             MYSQL_DATABASE: laravel_db
             MYSQL_USER: laravel_user
             MYSQL_PASSWORD: laravel_pass
         command: mysqld --default-authentication-plugin=mysql_native_password
+        ports:
+            - "3306:3306"
         volumes:
             - ./docker/mysql/data:/var/lib/mysql
             - ./docker/mysql/my.cnf:/etc/mysql/conf.d/my.cnf
@@ -48,13 +51,3 @@ services:
     #     ports:
     #         - "8025:8025"
     #         - "1025:1025"
-
-    # stripe-cli:
-    #     image: stripe/stripe-cli
-    #     container_name: stripe-cli
-    #     volumes:
-    #         - ~/.config/stripe:/root/.config/stripe
-    #     command: >
-    #         listen --forward-to http://host.docker.internal/webhook/stripe
-    #     restart: unless-stopped
-
