--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,28 +1,31 @@
 server {
     listen 80;
-
     server_name localhost;
 
-    # frontend (Vite build後のファイルを配信)
-    root /var/www/frontend/dist;
-    index index.html;
-
-    location / {
-        try_files $uri /index.html;
-    }
-
-    # Laravel API
-    location /api {
-        root /var/www/backend/public;
+    # === Laravel 側 API ===
+    location ^~ /api {
         index index.php;
         try_files $uri /index.php?$query_string;
     }
 
+    location ^~ /sanctum {
+        index index.php;
+        try_files $uri /index.php?$query_string;
+    }
+
+    # PHP 処理
     location ~ \.php$ {
         include fastcgi_params;
         fastcgi_pass php:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME /var/www/backend/public$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+
+    # === React (SPA) ===
+    location / {
+        root /var/www/frontend/dist;
+        index index.html;
+        try_files $uri /index.html;
     }
 }
