--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -13,7 +13,7 @@ server {
         try_files $uri /index.php?$query_string;
     }
 
-    # PHP 処理
+    # PHP 処理 (Laravelのみ)
     location ~ \.php$ {
         include fastcgi_params;
         fastcgi_pass php:9000;
@@ -26,6 +26,9 @@ server {
     location / {
         root /var/www/frontend/dist;
         index index.html;
-        try_files $uri /index.html;
+        try_files $uri $uri/ /index.html;
     }
+
+    error_log /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
 }
