--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -13,6 +13,13 @@ server {
         try_files $uri /index.php?$query_string;
     }
 
+    # ここを追加！！
+    location ^~ /email/verify {
+        root /var/www/backend/public;
+        index index.php;
+        try_files $uri /index.php?$query_string;
+    }
+
     # PHP 処理 (Laravelのみ)
     location ~ \.php$ {
         include fastcgi_params;
