--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,6 @@
-### テスト用の.envファイル ###
 APP_NAME=TimeTracker
-APP_ENV=testing
-APP_KEY=base64:kM6WhUY0RrtGg6V8fesyLhEv63+vrlQmpd/LpcLoz4Y=
+APP_ENV=local
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,9 +10,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=demo_test
-DB_USERNAME=root
-DB_PASSWORD=root
+DB_DATABASE=laravel_db
+DB_USERNAME=laravel_user
+DB_PASSWORD=laravel_pass
 
 SEED_USER_COUNT=10
 
