--- a/backend/.env.preview
+++ b/backend/.env.preview
@@ -1,7 +1,7 @@
 ### Mac等、他機種で画面確認するときのための.envファイル ###
 APP_NAME=TimeTracker
 APP_ENV=local
-APP_KEY=base64:O1tqixdEFkurAfNGmTesTZHJgixns0eEHH9EnNLPE0E=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost:8000   # ← ngrok用に必須ではない。変えなくてOK
 
@@ -38,3 +38,5 @@ MAIL_FROM_NAME="COACHTECH 勤怠管理 認証"
 
 FRONTEND_URL=http://localhost:5173
 VITE_APP_NAME="${APP_NAME}"
+
+CACHE_STORE=file
