--- a/backend/.env.testing
+++ b/backend/.env.testing
@@ -1,7 +1,7 @@
 ### テスト用の.envファイル ###
 APP_NAME=TimeTracker
 APP_ENV=testing
-APP_KEY=base64:kM6WhUY0RrtGg6V8fesyLhEv63+vrlQmpd/LpcLoz4Y=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
